Fix null pointer dereference in GUI-less applications

A pointer to the primary screen, which in GUI-less applications
is null, was being dereferenced without testing, resulting in a
crash when using the camera.

Pick-to: 6.3 6.2
Fixes: QTBUG-103394
Change-Id: Id891423bba585b474adab079521287677e8c8075
Reviewed-by: Piotr Srebrny <piotr.srebrny@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>